--- a/slides/index.html
+++ b/slides/index.html
@@ -25,14 +25,19 @@
 					<h2>给零基础学生的编程实战课</h2>
 					<section>
 						<h3>基础篇</h3>
-						<p><a href="readability.html">1. 提高代码可读性</a></p>
-						<p><a href="headers.html">2. 用好写好头文件</a></p>
-						<p><a href="warnings.html">3. 消除所有编译警告</a></p>
-						<p><a href="constants.html">4. 常量的定义和使用</a></p>
-						<p><a href="using-cmake.html">5. 善用构建系统生成器</a></p>
+						<p><a href="what-is-programm.html">1. 初识程序</a></p>
+						<p><a href="python-overview.html">2. 我的第一个 Python 程序</a></p>
+						<p><a href="python-flow-control.html">3. 流程控制（Python）</a></p>
+						<p><a href="python-function.html">4. 函数（Python）</a></p>
+						<p><a href="python-interacting-with-user.html">5. 和用户交互（Python）</a></p>
+						<p><a href="javascript-overview.html">6. JavaScript 的特点</a></p>
+						<p><a href="javascript-updating-webpage.html">7. 使用 JavaScript 更新网页内容</a></p>
+						<p><a href="javascript-using-canvas.html">8. 在网页中绘制图形（JavaScript）</a></p>
+						<p><a href="javascript-interacting-with-user.html">9. 在网页中和用户交互（JavaScript）</a></p>
+						<p><a href="other-programming-languages.html">10. 其他编程语言长什么样？</a></p>
 					</section>
 					<section>
-						<h3>模式篇</h3>
+						<h3>实战篇</h3>
 						<p><a href="interface-design-patterns.html">6. 接口设计模式</a></p>
 						<p><a href="decoupling-algorithms-and-data.html">7. 解耦代码和数据</a></p>
 						<p><a href="sub-drivers.html">8. 子驱动程序实现模型</a></p>
