--- a/slides/index.html
+++ b/slides/index.html
@@ -24,12 +24,15 @@
 				<section>
 					<h2>给零基础学生的编程实战课</h2>
 					<section>
-						<h3>基础篇</h3>
+						<h3>基础篇（上）</h3>
 						<p><a href="what-is-programm.html">1. 初识程序</a></p>
 						<p><a href="python-overview.html">2. 我的第一个 Python 程序</a></p>
 						<p><a href="python-flow-control.html">3. 流程控制（Python）</a></p>
 						<p><a href="python-function.html">4. 函数（Python）</a></p>
 						<p><a href="python-interacting-with-user.html">5. 和用户交互（Python）</a></p>
+					</section>
+					<section>
+						<h3>基础篇（上）</h3>
 						<p><a href="javascript-overview.html">6. JavaScript 的特点</a></p>
 						<p><a href="javascript-updating-webpage.html">7. 使用 JavaScript 更新网页内容</a></p>
 						<p><a href="javascript-using-canvas.html">8. 在网页中绘制图形（JavaScript）</a></p>
