--- a/slides/index.html
+++ b/slides/index.html
@@ -32,7 +32,7 @@
 						<p><a href="python-interacting-with-user.html">5. 和用户交互（Python）</a></p>
 					</section>
 					<section>
-						<h3>基础篇（上）</h3>
+						<h3>基础篇（下）</h3>
 						<p><a href="javascript-overview.html">6. JavaScript 的特点</a></p>
 						<p><a href="javascript-updating-webpage.html">7. 使用 JavaScript 更新网页内容</a></p>
 						<p><a href="javascript-using-canvas.html">8. 在网页中绘制图形（JavaScript）</a></p>
@@ -40,7 +40,7 @@
 						<p><a href="other-programming-languages.html">10. 其他编程语言长什么样？</a></p>
 					</section>
 					<section>
-						<h3>实战篇</h3>
+						<h3>实战篇（上）</h3>
 						<p><a href="interface-design-patterns.html">6. 接口设计模式</a></p>
 						<p><a href="decoupling-algorithms-and-data.html">7. 解耦代码和数据</a></p>
 						<p><a href="sub-drivers.html">8. 子驱动程序实现模型</a></p>
@@ -48,7 +48,7 @@
 						<p><a href="state-machine.html">10. 状态机</a></p>
 					</section>
 					<section>
-						<h3>质量篇</h3>
+						<h3>实战篇（下）</h3>
 						<p><a href="coding-for-performance.html">11. 为性能编码</a></p>
 						<p><a href="unit-test.html">12. 单元测试</a></p>
 						<p><a href="efficient-debugging.html">13. 高效调试</a></p>
