--- a/slides/index.html
+++ b/slides/index.html
@@ -25,10 +25,10 @@
 					<h2>给零基础学生的编程实战课</h2>
 					<section>
 						<h3>基础篇（上）</h3>
-						<p><a href="what-is-programm.html">1. 初识程序</a></p>
-						<p><a href="python-overview.html">2. 我的第一个 Python 程序</a></p>
+						<p><a href="what-is-program.html">1. 表达式、语句、源代码和代码编辑器</a></p>
+						<p><a href="python-variables-and-data-types.html">2. 变量和数据类型（Python）</a></p>
 						<p><a href="python-flow-control.html">3. 流程控制（Python）</a></p>
-						<p><a href="python-function.html">4. 函数（Python）</a></p>
+						<p><a href="python-modules-and-std-library.html">4. 模块和标准库（Python）</a></p>
 						<p><a href="python-interacting-with-user.html">5. 和用户交互（Python）</a></p>
 					</section>
 					<section>
@@ -41,22 +41,13 @@
 					</section>
 					<section>
 						<h3>实战篇（上）</h3>
-						<p><a href="interface-design-patterns.html">6. 接口设计模式</a></p>
-						<p><a href="decoupling-algorithms-and-data.html">7. 解耦代码和数据</a></p>
-						<p><a href="sub-drivers.html">8. 子驱动程序实现模型</a></p>
-						<p><a href="dynamicly-loading-modules.html">9. 动态加载模块</a></p>
-						<p><a href="state-machine.html">10. 状态机</a></p>
 					</section>
 					<section>
 						<h3>实战篇（下）</h3>
-						<p><a href="coding-for-performance.html">11. 为性能编码</a></p>
-						<p><a href="unit-test.html">12. 单元测试</a></p>
-						<p><a href="efficient-debugging.html">13. 高效调试</a></p>
 					</section>
 					<section>
-						<h3>示范项目</h3>
-						<p><a target="_blank" href="https://gitlab.fmsoft.cn/VincentWei/best-practices-of-c">GitLab.FMSoft.CN</a></p>
-						<p><a target="_blank" href="https://github.com/VincentWei/best-practices-of-c">GitHub.COM</a></p>
+						<h3>课程仓库</h3>
+						<p><a target="_blank" href="https://github.com/VincentWei/PLZS">GitHub.COM</a></p>
 					</section>
 				</section>
 				<section id="grand-finale">
