--- a/slides/index.html
+++ b/slides/index.html
@@ -25,7 +25,7 @@
 					<h2>给零基础学生的编程实战课</h2>
 					<section>
 						<h3>基础篇（上）</h3>
-						<p><a href="what-is-program.html">1. 表达式、语句、源代码和代码编辑器</a></p>
+						<p><a href="python-my-first-program.html">1. 我的第一个 Python 程序</a></p>
 						<p><a href="python-variables-and-data-types.html">2. 变量和数据类型（Python）</a></p>
 						<p><a href="python-flow-control.html">3. 流程控制（Python）</a></p>
 						<p><a href="python-modules-and-std-library.html">4. 模块和标准库（Python）</a></p>
@@ -41,6 +41,7 @@
 					</section>
 					<section>
 						<h3>实战篇（上）</h3>
+						<p><a href="reading-or-write-data.html">11. 读写数据</a></p>
 					</section>
 					<section>
 						<h3>实战篇（下）</h3>
