--- a/slides/python-my-first-program.html
+++ b/slides/python-my-first-program.html
@@ -21,7 +21,7 @@
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
 			</header>
 			<div class="slides">
-				<section data-markdown="gitlab/my-first-program.md"
+				<section data-markdown="gitlab/python-my-first-program.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
