--- a/slides/index.html
+++ b/slides/index.html
@@ -25,6 +25,7 @@
 					<h2>给零基础学生的编程实战课</h2>
 					<section>
 						<h3>基础篇（上）</h3>
+						<p><a href="prepare-ubuntu-linux.html">1. 准备 Ubuntu Linux</a></p>
 						<p><a href="python-my-first-program.html">1. 我的第一个 Python 程序</a></p>
 						<p><a href="python-variables-and-data-types.html">2. 变量和数据类型（Python）</a></p>
 						<p><a href="python-flow-control.html">3. 流程控制（Python）</a></p>
