--- a/slides/python-my-first-program.html
+++ b/slides/python-my-first-program.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：给零基础学生的编程实战课</a></p>
+				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：给零基础学生的编程实战课</a>：<a href="#/0">我的第一个程序</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
 			</header>
 			<div class="slides">
