--- a/slides/prepare-ubuntu-linux.html
+++ b/slides/prepare-ubuntu-linux.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>给零基础学生的编程实战课：准备Ubuntu Linux</title>
+		<title>给零基础学生的编程实战课：准备开发环境</title>
 
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
