--- a/slides/index.html
+++ b/slides/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>计算机技术系列教程</title>
+		<title>计算机技术系列教程：给零基础学生的编程实战课</title>
 
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
@@ -24,32 +24,39 @@
 				<section>
 					<h2>给零基础学生的编程实战课</h2>
 					<section>
-						<h3>基础篇（上）</h3>
+						<h3>Python</h3>
 						<p><a href="prepare-ubuntu-linux.html">0. 准备开发环境</a></p>
-						<p><a href="python-my-first-program.html">1. 我的第一个 Python 程序</a></p>
-						<p><a href="python-variables-and-data-types.html">2. 变量和数据类型（Python）</a></p>
-						<p><a href="python-flow-control.html">3. 流程控制（Python）</a></p>
-						<p><a href="python-modules-and-std-library.html">4. 模块和标准库（Python）</a></p>
-						<p><a href="python-interacting-with-user.html">5. 和用户交互（Python）</a></p>
+						<p><a href="python-my-first-program.html">1. 我的第一个程序</a></p>
+						<p><a href="python-flow-control.html">2. 流程控制</a></p>
+						<p><a href="python-data-types.html">3. 数据类型</a></p>
+						<p><a href="python-modules-and-std-library.html">4. 模块和标准库</a></p>
+						<p><a href="python-interacting-with-user.html">5. 和用户交互</a></p>
 					</section>
 					<section>
-						<h3>基础篇（下）</h3>
-						<p><a href="javascript-overview.html">6. JavaScript 的特点</a></p>
-						<p><a href="javascript-updating-webpage.html">7. 使用 JavaScript 更新网页内容</a></p>
-						<p><a href="javascript-using-canvas.html">8. 在网页中绘制图形（JavaScript）</a></p>
-						<p><a href="javascript-interacting-with-user.html">9. 在网页中和用户交互（JavaScript）</a></p>
+						<h3>JavaScript</h3>
+						<p><a href="web-programming-overview.html">6. 网页编程的特点</a></p>
+						<p><a href="javascript-updating-webpage.html">7. 更新网页内容</a></p>
+						<p><a href="javascript-using-canvas.html">8. 在网页中绘制图形</a></p>
+						<p><a href="javascript-interacting-with-user.html">9. 在网页中和用户交互</a></p>
 						<p><a href="other-programming-languages.html">10. 其他编程语言长什么样？</a></p>
 					</section>
 					<section>
-						<h3>实战篇（上）</h3>
-						<p><a href="reading-or-write-data.html">11. 读写数据</a></p>
-					</section>
-					<section>
-						<h3>实战篇（下）</h3>
+						<h3>综合实战：联网游戏开发</h3>
+						<p><a href="collaborative-software-development.html">11. 基于 Git 的协作式软件开发</a></p>
+						<p><a href="design-of-architecture.html">12. 需求分析及架构设计</a></p>
+						<p><a href="setting-up-a-linux-server.html">13. Linux 服务器的安装和配置</a></p>
+						<p><a href="web-server-gateway">14. Web 服务器网关程序</a></p>
+						<p><a href="user-account-management.html">15. 用户账号管理及登录界面</a></p>
+						<p><a href="web-socekt-server-and-client.html">16. WebSocket 服务器及客户端</a></p>
+						<p><a href="web-socekt-client-in-webpage.html">17. 从网页中连接到 WebSocket 服务器</a></p>
+						<p><a href="setting-up-ai-large-language-model.html">18. 架设开源 AI 大模型</a></p>
+						<p><a href="using-ai-from-webpage.html">19. 网页端利用 AI 功能</a></p>
+						<p><a href="deploying-server-software.html">20. 部署服务器端软件</a></p>
 					</section>
 					<section>
 						<h3>课程仓库</h3>
 						<p><a target="_blank" href="https://github.com/VincentWei/PLZS">GitHub.COM</a></p>
+						<p><a target="_blank" href="https://gitee.com/vincentwei7/PLZS">Gitee.COM</a></p>
 					</section>
 				</section>
 				<section id="grand-finale">
