--- a/slides/index.html
+++ b/slides/index.html
@@ -24,8 +24,12 @@
 				<section>
 					<h2>给零基础学生的编程实战课</h2>
 					<section>
+						<h3>番外篇</h3>
+						<p><a href="prepare-ubuntu-linux.html">准备开发环境</a></p>
+						<p><a href="other-programming-languages.html">其他编程语言长什么样？</a></p>
+					</section>
+					<section>
 						<h3>Python</h3>
-						<p><a href="prepare-ubuntu-linux.html">0. 准备开发环境</a></p>
 						<p><a href="python-my-first-program.html">1. 我的第一个程序</a></p>
 						<p><a href="python-flow-control.html">2. 流程控制</a></p>
 						<p><a href="python-data-types.html">3. 数据类型</a></p>
@@ -34,19 +38,22 @@
 					</section>
 					<section>
 						<h3>JavaScript</h3>
-						<p><a href="web-programming-overview.html">6. 网页编程的特点</a></p>
-						<p><a href="javascript-updating-webpage.html">7. 更新网页内容</a></p>
-						<p><a href="javascript-using-canvas.html">8. 在网页中绘制图形</a></p>
-						<p><a href="javascript-interacting-with-user.html">9. 在网页中和用户交互</a></p>
-						<p><a href="other-programming-languages.html">10. 其他编程语言长什么样？</a></p>
+						<p><a href="web-programming-overview.html">6. 搭建Web服务器</a></p>
+						<p><a href="web-programming-overview.html">7. 网页编程的特点</a></p>
+						<p><a href="javascript-updating-webpage.html">8. 更新网页内容</a></p>
+						<p><a href="javascript-using-canvas.html">9. 在网页中绘制图形</a></p>
+						<p><a href="javascript-interacting-with-user.html">10. 在网页中和用户交互</a></p>
 					</section>
 					<section>
-						<h3>综合实战：联网游戏开发</h3>
+						<h3>综合实战：联网游戏开发（上）</h3>
 						<p><a href="collaborative-software-development.html">11. 基于 Git 的协作式软件开发</a></p>
 						<p><a href="design-of-architecture.html">12. 需求分析及架构设计</a></p>
 						<p><a href="setting-up-a-linux-server.html">13. Linux 服务器的安装和配置</a></p>
 						<p><a href="web-server-gateway">14. Web 服务器网关程序</a></p>
 						<p><a href="user-account-management.html">15. 用户账号管理及登录界面</a></p>
+					</section>
+					<section>
+						<h3>综合实战：联网游戏开发（下）</h3>
 						<p><a href="web-socekt-server-and-client.html">16. WebSocket 服务器及客户端</a></p>
 						<p><a href="web-socekt-client-in-webpage.html">17. 从网页中连接到 WebSocket 服务器</a></p>
 						<p><a href="setting-up-ai-large-language-model.html">18. 架设开源 AI 大模型</a></p>
