--- a/slides/python-my-first-program.html
+++ b/slides/python-my-first-program.html
@@ -29,7 +29,7 @@
 				</section>
 				<section id="grand-finale">
 					<h2>扫一扫</h2>
-					<img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-wechat-channel-coding-log.jpg">
+					<img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-wechat-channel-coding-log.png">
 					<!-- img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-bilibili-space-coding-log.jpg" -->
 					<img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-wechat-enterprise-lee.jpg">
 				</section>
