--- a/slides/prepare-ubuntu-linux.html
+++ b/slides/prepare-ubuntu-linux.html
@@ -31,7 +31,7 @@
 					<h2>扫一扫</h2>
 					<img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-wechat-channel-coding-log.png">
 					<!-- img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-bilibili-space-coding-log.jpg" -->
-					<img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-wechat-enterprise-lee.jpg">
+					<img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-wechat-enterprise-lee.png">
 				</section>
 			</div>
 		</div>
