--- a/slides/python-flow-control.html
+++ b/slides/python-flow-control.html
@@ -6,7 +6,7 @@
 		<title>给零基础学生的编程实战课：流程控制</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/black.css">
+		<link rel="stylesheet" href="/dist/theme/solarized.css">
 		<link rel="stylesheet" href="/css/global.css">
 
 		<!-- Theme used for syntax highlighted code -->
