--- a/slides/python-my-first-program.html
+++ b/slides/python-my-first-program.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/black.css">
+		<link rel="stylesheet" href="/dist/theme/solarized.css">
 		<link rel="stylesheet" href="/css/global.css">
 
 		<!-- Theme used for syntax highlighted code -->
