--- a/slides/python-data-types.html
+++ b/slides/python-data-types.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>给零基础学生的编程实战课：我的第一个程序</title>
+		<title>给零基础学生的编程实战课：数据类型</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
@@ -15,11 +15,11 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：给零基础学生的编程实战课</a>：<a href="#/0">我的第一个程序</a></p>
+				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：给零基础学生的编程实战课</a>：<a href="#/0">数据类型</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
 			</header>
 			<div class="slides">
-				<section data-markdown="gitlab/python-my-first-program.md"
+				<section data-markdown="gitlab/python-data-type.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
