--- a/slides/python-data-types.html
+++ b/slides/python-data-types.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
 		<link rel="stylesheet" href="/css/global.css">
-
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
 	</head>
@@ -19,7 +18,7 @@
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
 			</header>
 			<div class="slides">
-				<section data-markdown="gitlab/python-data-type.md"
+				<section data-markdown="gitlab/python-data-types.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
@@ -55,3 +54,4 @@
 		</script>
 	</body>
 </html>
+
