--- a/slides/index.html
+++ b/slides/index.html
@@ -33,8 +33,8 @@
 						<p><a href="python-my-first-program.html">1. 我的第一个程序</a></p>
 						<p><a href="python-flow-control.html">2. 流程控制</a></p>
 						<p><a href="python-data-types.html">3. 数据类型</a></p>
-						<p><a href="python-modules-and-std-library.html">4. 模块和标准库</a></p>
-						<p><a href="python-interacting-with-user.html">5. 和用户交互</a></p>
+						<p><a href="python-standard-library.html">4. 标准库和常用模块</a></p>
+						<p><a href="python-mid-term-project.html">5. 中期作业相关的知识点</a></p>
 					</section>
 					<section>
 						<h3>JavaScript</h3>
