--- a/slides/index.html
+++ b/slides/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>计算机技术系列教程：给零基础学生的编程实战课</title>
+		<title>计算机技术系列教程：给十岁及以上学生的编程实战系列课程</title>
 
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
@@ -22,43 +22,46 @@
 			</header>
 			<div class="slides">
 				<section>
-					<h2>给零基础学生的编程实战课</h2>
+					<h2>给十岁及以上学生的编程实战系列课程</h2>
 					<section>
-						<h3>番外篇</h3>
-						<p><a href="prepare-ubuntu-linux.html">准备开发环境</a></p>
-						<p><a href="other-programming-languages.html">其他编程语言长什么样？</a></p>
+						<h3>零基础普及班</h3>
+						<p><a href="preparing-ubuntu-linux.html">1. 准备开发环境</a></p>
+						<p><a href="using-linux-desktop.html">2. 学用 Linux 桌面系统</a></p>
+						<p><a href="my-first-shell-program.html">3. 我的第一个 Shell 程序</a></p>
+						<p><a href="my-first-python-program.html">3. 我的第一个 Python 程序</a></p>
+						<p><a href="my-first-open-source-repository.html">4. 我的第一个开源仓库</a></p>
 					</section>
 					<section>
-						<h3>Python</h3>
-						<p><a href="python-my-first-program.html">1. 我的第一个程序</a></p>
-						<p><a href="python-flow-control.html">2. 流程控制</a></p>
-						<p><a href="python-data-types.html">3. 数据类型</a></p>
-						<p><a href="python-standard-library.html">4. 标准库和常用模块</a></p>
-						<p><a href="python-mid-term-project.html">5. 中期作业相关的知识点</a></p>
+						<h3>筑基班</h3>
+						<p><a href="python-flow-control.html">1. Python 流程控制</a></p>
+						<p><a href="python-data-types.html">1. Python 数据类型</a></p>
+						<p><a href="python-standard-library-common-modules.html">3. Python 标准库和常用模块</a></p>
+						<p><a href="python-mid-term-project.html">4. 中期作业相关的知识点</a></p>
+						<p><a href="web-programming-overview.html">5. 搭建Web服务器</a></p>
+						<p><a href="web-programming-overview.html">6. 网页编程的特点</a></p>
+						<p><a href="javascript-updating-webpage.html">7. 更新网页内容</a></p>
+						<p><a href="javascript-using-canvas.html">8. 在网页中绘制图形</a></p>
+						<p><a href="javascript-interacting-with-user.html">9. 在网页中和用户交互</a></p>
 					</section>
 					<section>
-						<h3>JavaScript</h3>
-						<p><a href="web-programming-overview.html">6. 搭建Web服务器</a></p>
-						<p><a href="web-programming-overview.html">7. 网页编程的特点</a></p>
-						<p><a href="javascript-updating-webpage.html">8. 更新网页内容</a></p>
-						<p><a href="javascript-using-canvas.html">9. 在网页中绘制图形</a></p>
-						<p><a href="javascript-interacting-with-user.html">10. 在网页中和用户交互</a></p>
-					</section>
-					<section>
-						<h3>综合实战：联网游戏开发（上）</h3>
+						<h3>AI 实战班</h3>
 						<p><a href="collaborative-software-development.html">11. 基于 Git 的协作式软件开发</a></p>
 						<p><a href="design-of-architecture.html">12. 需求分析及架构设计</a></p>
 						<p><a href="setting-up-a-linux-server.html">13. Linux 服务器的安装和配置</a></p>
 						<p><a href="web-server-gateway">14. Web 服务器网关程序</a></p>
 						<p><a href="user-account-management.html">15. 用户账号管理及登录界面</a></p>
-					</section>
-					<section>
-						<h3>综合实战：联网游戏开发（下）</h3>
 						<p><a href="web-socekt-server-and-client.html">16. WebSocket 服务器及客户端</a></p>
 						<p><a href="web-socekt-client-in-webpage.html">17. 从网页中连接到 WebSocket 服务器</a></p>
 						<p><a href="setting-up-ai-large-language-model.html">18. 架设开源 AI 大模型</a></p>
 						<p><a href="using-ai-from-webpage.html">19. 网页端利用 AI 功能</a></p>
 						<p><a href="deploying-server-software.html">20. 部署服务器端软件</a></p>
+					</section>
+					<section>
+						<h3>AI 信奥班</h3>
+					</section>
+					<section>
+						<h3>番外篇</h3>
+						<p><a href="other-programming-languages.html">2. 其他编程语言长什么样？</a></p>
 					</section>
 					<section>
 						<h3>课程仓库</h3>
