--- a/slides/index.html
+++ b/slides/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>计算机技术系列教程：给十岁及以上学生的编程实战系列课程</title>
+		<title>计算机技术系列教程：面相十岁及以上学生的编程实战系列课程</title>
 
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
@@ -22,7 +22,7 @@
 			</header>
 			<div class="slides">
 				<section>
-					<h2>给十岁及以上学生的编程实战系列课程</h2>
+					<h2>PLZS</h2>
 					<section>
 						<h3>零基础普及班</h3>
 						<p><a href="preparing-ubuntu-linux.html">1. 准备开发环境</a></p>
@@ -45,16 +45,16 @@
 					</section>
 					<section>
 						<h3>AI 实战班</h3>
-						<p><a href="collaborative-software-development.html">11. 基于 Git 的协作式软件开发</a></p>
-						<p><a href="design-of-architecture.html">12. 需求分析及架构设计</a></p>
-						<p><a href="setting-up-a-linux-server.html">13. Linux 服务器的安装和配置</a></p>
-						<p><a href="web-server-gateway">14. Web 服务器网关程序</a></p>
-						<p><a href="user-account-management.html">15. 用户账号管理及登录界面</a></p>
-						<p><a href="web-socekt-server-and-client.html">16. WebSocket 服务器及客户端</a></p>
-						<p><a href="web-socekt-client-in-webpage.html">17. 从网页中连接到 WebSocket 服务器</a></p>
-						<p><a href="setting-up-ai-large-language-model.html">18. 架设开源 AI 大模型</a></p>
-						<p><a href="using-ai-from-webpage.html">19. 网页端利用 AI 功能</a></p>
-						<p><a href="deploying-server-software.html">20. 部署服务器端软件</a></p>
+						<p><a href="collaborative-software-development.html">1. 基于 Git 的协作式软件开发</a></p>
+						<p><a href="design-of-architecture.html">2. 需求分析及架构设计</a></p>
+						<p><a href="setting-up-a-linux-server.html">3. Linux 服务器的安装和配置</a></p>
+						<p><a href="web-server-gateway">4. Web 服务器网关程序</a></p>
+						<p><a href="user-account-management.html">5. 用户账号管理及登录界面</a></p>
+						<p><a href="web-socekt-server-and-client.html">6. WebSocket 服务器及客户端</a></p>
+						<p><a href="web-socekt-client-in-webpage.html">7. 从网页中连接到 WebSocket 服务器</a></p>
+						<p><a href="setting-up-ai-large-language-model.html">8. 架设开源 AI 大模型</a></p>
+						<p><a href="using-ai-from-webpage.html">9. 网页端利用 AI 功能</a></p>
+						<p><a href="deploying-server-software.html">10. 部署服务器端软件</a></p>
 					</section>
 					<section>
 						<h3>AI 信奥班</h3>
