--- a/slides/index.html
+++ b/slides/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>计算机技术系列教程：面相十岁及以上学生的编程实战系列课程</title>
+		<title>计算机技术系列教程：面向十岁及以上学生的编程实战系列课程</title>
 
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
@@ -17,12 +17,11 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/">考鼎<span>&reg;</span>学堂：魏永明系列课程</a></p>
+				<p><a href="/">考鼎<span>&reg;</span>学堂：魏永明系列课程</a></p> / PLZS
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
 			</header>
 			<div class="slides">
 				<section>
-					<h2>PLZS</h2>
 					<section>
 						<h3>零基础普及班</h3>
 						<p><a href="preparing-ubuntu-linux.html">1. 准备开发环境</a></p>
