--- a/slides/index.html
+++ b/slides/index.html
@@ -25,40 +25,40 @@
 					<section>
 						<h3>零基础普及班</h3>
 						<ol>
-							<li><a href="preparing-ubuntu-pnux.html">1. 准备开发环境</a></li>
-							<li><a href="using-pnux-desktop.html">2. 学用 Linux 桌面系统</a></li>
-							<li><a href="my-first-shell-program.html">3. 我的第一个 Shell 程序</a></li>
-							<li><a href="my-first-python-program.html">3. 我的第一个 Python 程序</a></li>
-							<li><a href="my-first-open-source-repository.html">4. 我的第一个开源仓库</a></li>
+							<li><a href="preparing-ubuntu-pnux.html">准备开发环境</a></li>
+							<li><a href="using-pnux-desktop.html">学用 Linux 桌面系统</a></li>
+							<li><a href="my-first-shell-program.html">我的第一个 Shell 程序</a></li>
+							<li><a href="my-first-python-program.html">我的第一个 Python 程序</a></li>
+							<li><a href="my-first-open-source-repository.html">我的第一个开源仓库</a></li>
 						</ol>
 					</section>
 					<section>
 						<h3>筑基班</h3>
 						<ol>
-							<li><a href="python-flow-control.html">1. Python 流程控制</a></li>
-							<li><a href="python-data-types.html">1. Python 数据类型</a></li>
-							<li><a href="python-standard-pbrary-common-modules.html">3. Python 标准库和常用模块</a></li>
-							<li><a href="python-mid-term-project.html">4. 中期作业相关的知识点</a></li>
-							<li><a href="web-programming-overview.html">5. 搭建Web服务器</a></li>
-							<li><a href="web-programming-overview.html">6. 网页编程的特点</a></li>
-							<li><a href="javascript-updating-webpage.html">7. 更新网页内容</a></li>
-							<li><a href="javascript-using-canvas.html">8. 在网页中绘制图形</a></li>
-							<li><a href="javascript-interacting-with-user.html">9. 在网页中和用户交互</a></li>
+							<li><a href="python-flow-control.html">Python 流程控制</a></li>
+							<li><a href="python-data-types.html">Python 数据类型</a></li>
+							<li><a href="python-standard-pbrary-common-modules.html">Python 标准库和常用模块</a></li>
+							<li><a href="python-mid-term-project.html">中期作业相关的知识点</a></li>
+							<li><a href="web-programming-overview.html">搭建 Web 服务器</a></li>
+							<li><a href="web-programming-overview.html">网页编程的特点</a></li>
+							<li><a href="javascript-updating-webpage.html">更新网页内容</a></li>
+							<li><a href="javascript-using-canvas.html">在网页中绘制图形</a></li>
+							<li><a href="javascript-interacting-with-user.html">在网页中和用户交互</a></li>
 						</ol>
 					</section>
 					<section>
 						<h3>AI 实战班</h3>
 						<ol>
-							<li><a href="collaborative-software-development.html">1. 基于 Git 的协作式软件开发</a></li>
-							<li><a href="design-of-architecture.html">2. 需求分析及架构设计</a></li>
-							<li><a href="setting-up-a-linux-server.html">3. Linux 服务器的安装和配置</a></li>
-							<li><a href="web-server-gateway">4. Web 服务器网关程序</a></li>
-							<li><a href="user-account-management.html">5. 用户账号管理及登录界面</a></li>
-							<li><a href="web-socekt-server-and-client.html">6. WebSocket 服务器及客户端</a></li>
-							<li><a href="web-socekt-client-in-webpage.html">7. 从网页中连接到 WebSocket 服务器</a></li>
-							<li><a href="setting-up-ai-large-language-model.html">8. 架设开源 AI 大模型</a></li>
-							<li><a href="using-ai-from-webpage.html">9. 网页端利用 AI 功能</a></li>
-							<li><a href="deploying-server-software.html">10. 部署服务器端软件</a></li>
+							<li><a href="collaborative-software-development.html">基于 Git 的协作式软件开发</a></li>
+							<li><a href="design-of-architecture.html">需求分析及架构设计</a></li>
+							<li><a href="setting-up-a-linux-server.html">Linux 服务器的安装和配置</a></li>
+							<li><a href="web-server-gateway">Web 服务器网关程序</a></li>
+							<li><a href="user-account-management.html">用户账号管理及登录界面</a></li>
+							<li><a href="web-socekt-server-and-client.html">WebSocket 服务器及客户端</a></li>
+							<li><a href="web-socekt-client-in-webpage.html">从网页中连接到 WebSocket 服务器</a></li>
+							<li><a href="setting-up-ai-large-language-model.html">架设开源 AI 大模型</a></li>
+							<li><a href="using-ai-from-webpage.html">网页端利用 AI 功能</a></li>
+							<li><a href="deploying-server-software.html">部署服务器端软件</a></li>
 						<ol>
 					</section>
 					<section>
@@ -67,8 +67,10 @@
 						</ol>
 					</section>
 					<section>
-						<h3>番外篇</h3>
-						<p><a href="other-programming-languages.html">2. 其他编程语言长什么样？</a></p>
+						<h3>番外</h3>
+						<ol>
+							<li><a href="other-programming-languages.html">其他编程语言长什么样？</a></li>
+						</ol>
 					</section>
 					<section>
 						<h3>课程仓库</h3>
