--- a/slides/index.html
+++ b/slides/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/">考鼎<span>&reg;</span>学堂：魏永明系列课程</a></p> / PLZS
+				<p><a href="/">考鼎<span>&reg;</span>学堂：魏永明系列课程</a> / PLZS</p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
 			</header>
 			<div class="slides">
@@ -25,8 +25,8 @@
 					<section>
 						<h3>零基础普及班</h3>
 						<ol>
-							<li><a href="preparing-ubuntu-pnux.html">准备开发环境</a></li>
-							<li><a href="using-pnux-desktop.html">学用 Linux 桌面系统</a></li>
+							<li><a href="preparing-ubuntu-linux.html">准备开发环境</a></li>
+							<li><a href="using-linux-desktop.html">学用 Linux 桌面系统</a></li>
 							<li><a href="my-first-shell-program.html">我的第一个 Shell 程序</a></li>
 							<li><a href="my-first-python-program.html">我的第一个 Python 程序</a></li>
 							<li><a href="my-first-open-source-repository.html">我的第一个开源仓库</a></li>
