--- a/slides/index.html
+++ b/slides/index.html
@@ -38,7 +38,7 @@
 							<li><a href="python-flow-control.html">Python 流程控制</a></li>
 							<li><a href="python-data-types.html">Python 数据类型</a></li>
 							<li><a href="python-standard-pbrary-common-modules.html">Python 标准库和常用模块</a></li>
-							<li><a href="python-mid-term-project.html">中期作业相关的知识点</a></li>
+							<li><a href="python-mid-term-project.html">大作业相关知识点</a></li>
 							<li><a href="web-programming-overview.html">搭建 Web 服务器</a></li>
 							<li><a href="web-programming-overview.html">网页编程的特点</a></li>
 							<li><a href="javascript-updating-webpage.html">更新网页内容</a></li>
@@ -50,7 +50,7 @@
 						<h3>AI 实战班</h3>
 						<ol>
 							<li><a href="collaborative-software-development.html">基于 Git 的协作式软件开发</a></li>
-							<li><a href="design-of-architecture.html">需求分析及架构设计</a></li>
+							<li><a href="design-of-architecture.html">大作业需求分析及架构设计</a></li>
 							<li><a href="setting-up-a-linux-server.html">Linux 服务器的安装和配置</a></li>
 							<li><a href="web-server-gateway">Web 服务器网关程序</a></li>
 							<li><a href="user-account-management.html">用户账号管理及登录界面</a></li>
@@ -64,6 +64,16 @@
 					<section>
 						<h3>AI 信奥班</h3>
 						<ol>
+							<li><a href="my-first-cpp-program.html">初识 C++ 编程语言</a></li>
+							<li><a href="design-of-architecture.html">需求分析及架构设计</a></li>
+							<li><a href="setting-up-a-linux-server.html">Linux 服务器的安装和配置</a></li>
+							<li><a href="web-server-gateway">Web 服务器网关程序</a></li>
+							<li><a href="user-account-management.html">用户账号管理及登录界面</a></li>
+							<li><a href="web-socekt-server-and-client.html">WebSocket 服务器及客户端</a></li>
+							<li><a href="web-socekt-client-in-webpage.html">从网页中连接到 WebSocket 服务器</a></li>
+							<li><a href="setting-up-ai-large-language-model.html">架设开源 AI 大模型</a></li>
+							<li><a href="using-ai-from-webpage.html">网页端利用 AI 功能</a></li>
+							<li><a href="deploying-server-software.html">部署服务器端软件</a></li>
 						</ol>
 					</section>
 					<section>
