--- a/slides/index.html
+++ b/slides/index.html
@@ -26,7 +26,7 @@
 						<h3>零基础普及班</h3>
 						<ol>
 							<li><a href="preparing-ubuntu-linux.html">准备开发环境</a></li>
-							<li><a href="using-linux-desktop-system.html">学用 Linux 桌面系统</a></li>
+							<li><a href="using-linux-desktop-system.html">使用 Linux 桌面系统</a></li>
 							<li><a href="my-first-shell-program.html">我的第一个 Shell 程序</a></li>
 							<li><a href="my-first-python-program.html">我的第一个 Python 程序</a></li>
 							<li><a href="my-first-open-source-repository.html">我的第一个开源仓库</a></li>
