--- a/slides/index.html
+++ b/slides/index.html
@@ -3,14 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
 		<title>计算机技术系列教程：面向十岁及以上学生的编程实战系列课程</title>
-
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
 		<link rel="stylesheet" href="/css/global.css">
-
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
 	</head>
@@ -28,7 +25,7 @@
 							<li><a href="preparing-ubuntu-linux.html">准备开发环境</a></li>
 							<li><a href="using-linux-desktop-system.html">使用 Linux 桌面系统</a></li>
 							<li><a href="my-first-python-program.html">我的第一个 Python 程序</a></li>
-							<li><a href="my-first-shell-program.html">Bash Shell 及 Shell 编程</a></li>
+							<li><a href="my-first-shell-program.html">我的第一个 Bash 脚本</a></li>
 							<li><a href="my-first-open-source-repository.html">我的第一个开源仓库</a></li>
 						</ol>
 					</section>
