--- a/slides/index.html
+++ b/slides/index.html
@@ -25,7 +25,6 @@
 							<li><a href="preparing-ubuntu-linux.html">准备开发环境</a></li>
 							<li><a href="using-linux-desktop-system.html">使用 Linux 桌面系统</a></li>
 							<li><a href="my-first-python-program.html">我的第一个 Python 程序</a></li>
-							<li><a href="my-first-shell-program.html">我的第一个 Bash 脚本</a></li>
 							<li><a href="my-first-open-source-repository.html">我的第一个开源仓库</a></li>
 						</ol>
 					</section>
@@ -47,6 +46,7 @@
 					<section>
 						<h3>AI 实战班</h3>
 						<ol>
+							<li><a href="bash-shell-programming.html">Bash Shell 编程</a></li>
 							<li><a href="collaborative-software-development.html">基于 Git 的协作式软件开发</a></li>
 							<li><a href="design-of-architecture.html">大作业需求分析及架构设计</a></li>
 							<li><a href="setting-up-a-linux-server.html">Linux 服务器的安装和配置</a></li>
