--- a/slides/my-first-python-program.html
+++ b/slides/my-first-python-program.html
@@ -53,5 +53,6 @@
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
 		</script>
+		<script src="/js/util/hljs-copy.js"></script>
 	</body>
 </html>
