--- a/slides/my-first-python-program.html
+++ b/slides/my-first-python-program.html
@@ -53,6 +53,6 @@
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
 		</script>
-		<!-- script src="/js/utils/hljs-copy.js"></script -->
+		<script src="/js/utils/hljs-copy.js"></script>
 	</body>
 </html>
