--- a/slides/my-first-python-program.html
+++ b/slides/my-first-python-program.html
@@ -38,6 +38,7 @@
 		<script src="/plugin/notes/notes.js"></script>
 		<script src="/plugin/markdown/markdown.js"></script>
 		<script src="/plugin/highlight/highlight.js"></script>
+		<script src="/js/utils/code-copy.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
@@ -48,11 +49,9 @@
 				margin: 0.04,
 				hash: true,
 				slideNumber: true,
-
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-			});
+			}).then(() => initCodeCopy());
 		</script>
-		<script src="/js/utils/hljs-copy.js"></script>
 	</body>
 </html>
