--- a/slides/index.html
+++ b/slides/index.html
@@ -94,29 +94,30 @@
 				</section>
 			</div>
 		</div>
-
-        <footer>
-            <address class="text-center">
-                <a target="_blank" href="http://beian.miit.gov.cn/">京ICP备05046847号-7</a>；
-                <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802032210"><img src="/备案图标.png">京公网安备 11010802032210号</a>；经营许可证号：110108004781535
-            </address>
-        </footer>
-
+		<footer>
+			<address class="text-center">
+				<a target="_blank" href="http://beian.miit.gov.cn/">京ICP备05046847号-7</a>；
+				<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802032210"><img src="/备案图标.png">京公网安备 11010802032210号</a>；经营许可证号：110108004781535
+			</address>
+		</footer>
 		<script src="/dist/reveal.js"></script>
 		<script src="/plugin/notes/notes.js"></script>
 		<script src="/plugin/markdown/markdown.js"></script>
 		<script src="/plugin/highlight/highlight.js"></script>
+		<script src="/js/utils/code-copy.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
+				width: 1024,
+				height: 768,
+				margin: 0.04,
 				hash: true,
 				slideNumber: true,
-
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-			});
+			}).then(() => initCodeCopy());
 		</script>
 	</body>
 </html>
