--- a/slides/index.html
+++ b/slides/index.html
@@ -41,12 +41,12 @@
 							<li><a href="javascript-using-canvas.html">在网页中绘制图形</a></li>
 							<li><a href="javascript-interacting-with-user.html">在网页中和用户交互</a></li>
 							<li><a href="javascript-mid-term-project.html">大作业相关知识点（JavaScript）</a></li>
+							<li><a href="bash-shell-programming.html">Bash Shell 编程</a></li>
 						</ol>
 					</section>
 					<section>
 						<h3>AI 实战班</h3>
 						<ol>
-							<li><a href="bash-shell-programming.html">Bash Shell 编程</a></li>
 							<li><a href="collaborative-software-development.html">基于 Git 的协作式软件开发</a></li>
 							<li><a href="design-of-architecture.html">大作业需求分析及架构设计</a></li>
 							<li><a href="setting-up-a-linux-server.html">Linux 服务器的安装和配置</a></li>
@@ -62,16 +62,16 @@
 					<section>
 						<h3>AI 信奥班</h3>
 						<ol>
-							<li><a href="my-first-cpp-program.html">初识 C++ 编程语言</a></li>
-							<li><a href="design-of-architecture.html">需求分析及架构设计</a></li>
-							<li><a href="setting-up-a-linux-server.html">Linux 服务器的安装和配置</a></li>
-							<li><a href="web-server-gateway">Web 服务器网关程序</a></li>
-							<li><a href="user-account-management.html">用户账号管理及登录界面</a></li>
-							<li><a href="web-socekt-server-and-client.html">WebSocket 服务器及客户端</a></li>
-							<li><a href="web-socekt-client-in-webpage.html">从网页中连接到 WebSocket 服务器</a></li>
-							<li><a href="setting-up-ai-large-language-model.html">架设开源 AI 大模型</a></li>
-							<li><a href="using-ai-from-webpage.html">网页端利用 AI 功能</a></li>
-							<li><a href="deploying-server-software.html">部署服务器端软件</a></li>
+							<li><a href="my-first-cpp-program.html">我的第一个 C++ 程序</a></li>
+							<li><a href="cpp-toolchain-and-project-building.html">C++ 工具链及项目构建</a></li>
+							<li><a href="cpp-standard-template-library.html">C++ 标准模板库</a></li>
+							<li><a href="cpp-string-operation.html">字符串操作及算法</a></li>
+							<li><a href="cpp-basic-data-structures.html">基础数据结构</a></li>
+							<li><a href="cpp-basic-algorithms.html">基础算法</a></li>
+							<li><a href="cpp-classic-examples-for-junior.html">经典例题（上）</a></li>
+							<li><a href="cpp-advanced-data-structures.html">高级数据结构</a></li>
+							<li><a href="cpp-advanced-algorithms.html">进阶算法</a></li>
+							<li><a href="cpp-classic-examples-for-senior.html">经典例题（下）</a></li>
 						</ol>
 					</section>
 					<section>
