--- a/slides/index.html
+++ b/slides/index.html
@@ -33,7 +33,7 @@
 						<ol>
 							<li><a href="python-flow-control.html">Python 流程控制</a></li>
 							<li><a href="python-data-types.html">Python 数据类型</a></li>
-							<li><a href="python-standard-library.html">Python 标准库和常用模块</a></li>
+							<li><a href="python-standard-library.html">Python 标准库</a></li>
 							<li><a href="python-mid-term-project.html">大作业相关知识点（Python）</a></li>
 							<li><a href="web-programming-overview.html">搭建 Web 服务器</a></li>
 							<li><a href="web-programming-overview.html">网页编程的特点</a></li>
