new slides from ICSM

--- a/slides/index.html
+++ b/slides/index.html
@@ -41,7 +41,6 @@
 							<li><a href="javascript-using-canvas.html">在网页中绘制图形</a></li>
 							<li><a href="javascript-interacting-with-user.html">在网页中和用户交互</a></li>
 							<li><a href="javascript-mid-term-project.html">大作业相关知识点（JavaScript）</a></li>
-							<li><a href="bash-shell-programming.html">Bash Shell 编程</a></li>
 						</ol>
 					</section>
 					<section>
@@ -77,7 +76,14 @@
 					<section>
 						<h3>番外</h3>
 						<ol>
+							<li><a href="bash-shell-programming.html">Bash Shell 编程</a></li>
 							<li><a href="other-programming-languages.html">其他编程语言长什么样？</a></li>
+							<li><a href="icsm-why-choose-binary.html">为什么选择二进制？</a></li>
+							<li><a href="icsm-binary-arithmetic.html">二进制运算</a></li>
+							<li><a href="icsm-numbers.html">数值：整数和实数</a></li>
+							<li><a href="icsm-text.html">文字：字符集及编码</a></li>
+							<li><a href="icsm-multimedia.html">多媒体：图像、图形及音视频</a></li>
+							<li><a href="icsm-structured-data.html">结构化数据</a></li>
 						</ol>
 					</section>
 					<section>
