--- a/slides/index.html
+++ b/slides/index.html
@@ -34,13 +34,13 @@
 							<li><a href="python-flow-control.html">Python 流程控制</a></li>
 							<li><a href="python-data-types.html">Python 数据类型</a></li>
 							<li><a href="python-standard-library.html">Python 标准库</a></li>
-							<li><a href="python-mid-term-project.html">大作业相关知识点（Python）</a></li>
-							<li><a href="web-programming-overview.html">搭建 Web 服务器</a></li>
-							<li><a href="web-programming-overview.html">网页编程的特点</a></li>
+							<li><a href="python-comprehensive-exercise.html">Python 综合练习</a></li>
+							<li><a href="building-a-web-server.html">搭建 Web 服务器</a></li>
+							<li><a href="javascript-and-web-programming.html">JavaScript 及网页编程</a></li>
 							<li><a href="javascript-updating-webpage.html">更新网页内容</a></li>
 							<li><a href="javascript-using-canvas.html">在网页中绘制图形</a></li>
 							<li><a href="javascript-interacting-with-user.html">在网页中和用户交互</a></li>
-							<li><a href="javascript-mid-term-project.html">大作业相关知识点（JavaScript）</a></li>
+							<li><a href="javascript-comprehensive-exercise.html">JavaScript 综合练习</a></li>
 						</ol>
 					</section>
 					<section>
