--- a/slides/index.html
+++ b/slides/index.html
@@ -34,18 +34,19 @@
 							<li><a href="python-flow-control.html">Python 流程控制</a></li>
 							<li><a href="python-data-types.html">Python 数据类型</a></li>
 							<li><a href="python-standard-library.html">Python 标准库</a></li>
-							<li><a href="python-comprehensive-exercise.html">Python 综合练习</a></li>
+							<li><a href="python-comprehensive-exercise.html">Python 大作业</a></li>
+							<li><a href="python-project-coaching.html">Python 大作业辅导</a></li>
+						</ol>
+					</section>
+					<section>
+						<h3>AI 实战班</h3>
+						<ol>
 							<li><a href="building-a-web-server.html">搭建 Web 服务器</a></li>
 							<li><a href="javascript-and-web-programming.html">JavaScript 及网页编程</a></li>
 							<li><a href="javascript-updating-webpage.html">更新网页内容</a></li>
 							<li><a href="javascript-using-canvas.html">在网页中绘制图形</a></li>
 							<li><a href="javascript-interacting-with-user.html">在网页中和用户交互</a></li>
 							<li><a href="javascript-comprehensive-exercise.html">JavaScript 综合练习</a></li>
-						</ol>
-					</section>
-					<section>
-						<h3>AI 实战班</h3>
-						<ol>
 							<li><a href="collaborative-software-development.html">基于 Git 的协作式软件开发</a></li>
 							<li><a href="design-of-architecture.html">大作业需求分析及架构设计</a></li>
 							<li><a href="setting-up-a-linux-server.html">Linux 服务器的安装和配置</a></li>
