--- a/slides/index.html
+++ b/slides/index.html
@@ -29,7 +29,7 @@
 						</ol>
 					</section>
 					<section>
-						<h3>筑基班</h3>
+						<h3>AI 筑基班</h3>
 						<ol>
 							<li><a href="python-flow-control.html">Python 流程控制</a></li>
 							<li><a href="python-data-types.html">Python 数据类型</a></li>
@@ -41,26 +41,21 @@
 					<section>
 						<h3>AI 实战班</h3>
 						<ol>
-							<li><a href="building-a-web-server.html">搭建 Web 服务器</a></li>
+							<li><a href="javascript-and-web-programming.html">Web 服务器、浏览器及相关协议</a></li>
 							<li><a href="javascript-and-web-programming.html">JavaScript 及网页编程</a></li>
-							<li><a href="javascript-updating-webpage.html">更新网页内容</a></li>
-							<li><a href="javascript-using-canvas.html">在网页中绘制图形</a></li>
-							<li><a href="javascript-interacting-with-user.html">在网页中和用户交互</a></li>
-							<li><a href="javascript-comprehensive-exercise.html">JavaScript 综合练习</a></li>
+							<li><a href="javascript-updating-webpage.html">Web 前端编程基础</a></li>
+							<li><a href="javascript-using-canvas.html">流行 Web 前端框架</a></li>
+							<li><a href="javascript-comprehensive-exercise.html">JavaScript 大作业</a></li>
 							<li><a href="collaborative-software-development.html">基于 Git 的协作式软件开发</a></li>
 							<li><a href="design-of-architecture.html">大作业需求分析及架构设计</a></li>
-							<li><a href="setting-up-a-linux-server.html">Linux 服务器的安装和配置</a></li>
-							<li><a href="web-server-gateway">Web 服务器网关程序</a></li>
 							<li><a href="user-account-management.html">用户账号管理及登录界面</a></li>
 							<li><a href="web-socekt-server-and-client.html">WebSocket 服务器及客户端</a></li>
-							<li><a href="web-socekt-client-in-webpage.html">从网页中连接到 WebSocket 服务器</a></li>
 							<li><a href="setting-up-ai-large-language-model.html">架设开源 AI 大模型</a></li>
-							<li><a href="using-ai-from-webpage.html">网页端利用 AI 功能</a></li>
-							<li><a href="deploying-server-software.html">部署服务器端软件</a></li>
+							<li><a href="bash-shell-programming.html">Bash Shell 编程及服务器运维</a></li>
 						<ol>
 					</section>
 					<section>
-						<h3>AI 信奥班</h3>
+						<h3>信奥筑基班</h3>
 						<ol>
 							<li><a href="my-first-cpp-program.html">我的第一个 C++ 程序</a></li>
 							<li><a href="cpp-toolchain-and-project-building.html">C++ 工具链及项目构建</a></li>
@@ -77,7 +72,6 @@
 					<section>
 						<h3>番外</h3>
 						<ol>
-							<li><a href="bash-shell-programming.html">Bash Shell 编程</a></li>
 							<li><a href="other-programming-languages.html">其他编程语言长什么样？</a></li>
 							<li><a href="icsm-why-choose-binary.html">为什么选择二进制？</a></li>
 							<li><a href="icsm-binary-arithmetic.html">二进制运算</a></li>
