--- a/slides/index.html
+++ b/slides/index.html
@@ -57,16 +57,12 @@
 					<section>
 						<h3>信奥筑基班</h3>
 						<ol>
-							<li><a href="my-first-cpp-program.html">我的第一个 C++ 程序</a></li>
-							<li><a href="cpp-toolchain-and-project-building.html">C++ 工具链及项目构建</a></li>
-							<li><a href="cpp-standard-template-library.html">C++ 标准模板库</a></li>
-							<li><a href="cpp-string-operation.html">字符串操作及算法</a></li>
-							<li><a href="cpp-basic-data-structures.html">基础数据结构</a></li>
-							<li><a href="cpp-basic-algorithms.html">基础算法</a></li>
-							<li><a href="cpp-classic-examples-for-junior.html">经典例题（上）</a></li>
-							<li><a href="cpp-advanced-data-structures.html">高级数据结构</a></li>
-							<li><a href="cpp-advanced-algorithms.html">进阶算法</a></li>
-							<li><a href="cpp-classic-examples-for-senior.html">经典例题（下）</a></li>
+							<li><a href="cpp-quick-start.html">C++ 快速入门</a></li>
+							<li><a href="cpp-flow-control.html">C++ 流程控制</a></li>
+							<li><a href="cpp-data-types.html">C++ 数据类型</a></li>
+							<li><a href="cpp-class-and-oop.html">C++ 面向对象编程</a></li>
+							<li><a href="cpp-project.html">C++ 大作业及相关知识点</a></li>
+							<li><a href="cpp-project-coaching.html">C++ 大作业辅导</a></li>
 						</ol>
 					</section>
 					<section>
